--- a/index.html
+++ b/index.html
@@ -1,10 +1,111 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="portfolioApp">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Jan Koszela - Portfolio site</title>
+
+  <!-- Bootstrap Core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom Fonts -->
+  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+
+  <!-- Theme CSS -->
+  <link href="web/css/portfolio.min.css" rel="stylesheet">
+
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js" integrity="sha384-0s5Pv64cNZJieYFkXYOTId2HMA2Lfb6q2nAcx2n0RTLUnCAoTTsS0nKEO27XyKcY" crossorigin="anonymous"></script>
+  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js" integrity="sha384-ZoaMbDF+4LeFxg6WdScQ9nnR1QC2MIRxA1O9KWEXQwns1G8UNyIEZIQidzb0T1fo" crossorigin="anonymous"></script>
+  <![endif]-->
+
 </head>
-<body>
+
+<body id="page-top" class="index" ng-controller="AppController">
+
+<!--Navigation-->
+<nav-bar></nav-bar>
+
+<!-- Header -->
+<head-info></head-info>
+
+<!--Services Section-->
+<service-section></service-section>
+
+<!-- Portfolio Grid Section -->
+<portfolio-section></portfolio-section>
+
+<!-- About Section -->
+<about-section></about-section>
+
+<!-- Team Section -->
+<team-section></team-section>
+
+<!-- Clients Aside -->
+<clients-aside></clients-aside>
+
+<!-- Contact Section -->
+<contact-section></contact-section>
+
+<!-- Footer section -->
+<footer-section></footer-section>
+
+<!-- jQuery -->
+<script src="vendor/jquery/jquery.min.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+<!-- Plugin JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
+
+<!-- Contact Form JavaScript -->
+<script src="web/js/contact_me.min.js"></script>
+
+<!-- Theme JavaScript -->
+<script src="web/js/portfolio.min.js"></script>
+
+<!-- AngularJs -->
+<script src="vendor/angularjs/angular.min.js"></script>
+
+<script src="vendor/angular-animate/angular-animate.min.js"></script>
+<script src="vendor/angular-touch/angular-touch.min.js"></script>
+<script src="vendor/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
+
+<!--Own AngularCode-->
+<script src="src/angular/app.module.js"></script>
+<script src="src/angular/nav-bar/nav-bar.module.js"></script>
+<script src="src/angular/nav-bar/nav-bar.component.js"></script>
+<script src="src/angular/head-info/head-info.module.js"></script>
+<script src="src/angular/head-info/head-info.component.js"></script>
+<script src="src/angular/service-section/service-section.module.js"></script>
+<script src="src/angular/service-section/service-section.component.js"></script>
+<script src="src/angular/portfolio-section/portfolio-section.module.js"></script>
+<script src="src/angular/portfolio-section/portfolio-section.component.js"></script>
+<script src="src/angular/about-section/about-section.module.js"></script>
+<script src="src/angular/about-section/about-section.component.js"></script>
+<script src="src/angular/team-section/team-section.module.js"></script>
+<script src="src/angular/team-section/team-section.component.js"></script>
+<script src="src/angular/clients-aside/clients-aside.module.js"></script>
+<script src="src/angular/clients-aside/clients-aside.component.js"></script>
+<script src="src/angular/contact-section/contact-section.module.js"></script>
+<script src="src/angular/contact-section/contact-section.component.js"></script>
+<script src="src/angular/footer-section/footer-section.module.js"></script>
+<script src="src/angular/footer-section/footer-section.component.js"></script>
 
 </body>
+
 </html>
+
