Add click-event for last element in About

--- a/src/angular/about-section/about-section.template.html
+++ b/src/angular/about-section/about-section.template.html
@@ -26,12 +26,14 @@
 
           <!--Last Element-->
           <li class="timeline-inverted">
-            <div class="timeline-image">
-              <h4>Be Part'
-                <br>Of Our'
-                <br>Story!'
-              </h4>
-            </div>
+            <a href="#contact" ng-click="$ctrl.scrollTo($event)">
+              <div class="timeline-image">
+                <h4>Be Part'
+                  <br>Of Our'
+                  <br>Story!'
+                </h4>
+              </div>
+            </a>
           </li>
         </ul>
       </div>
