Move files into 'src'

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Theme CSS -->
-  <link href="web/css/portfolio.min.css" rel="stylesheet">
+  <link href="web/styles/css/portfolio.min.css" rel="stylesheet">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -56,7 +56,6 @@
 <!-- Clients Aside -->
 <clients-aside></clients-aside>
 
-<!-- Contact Section -->
 <contact-section></contact-section>
 
 <!-- Footer section -->
@@ -72,10 +71,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
 
 <!-- Contact Form JavaScript -->
-<script src="web/js/contact_me.min.js"></script>
+<script src="web/scripts/js/contact_me.min.js"></script>
 
 <!-- Theme JavaScript -->
-<script src="web/js/portfolio.min.js"></script>
+<script src="web/scripts/js/portfolio.min.js"></script>
 
 <!-- AngularJs -->
 <script src="vendor/angularjs/angular.min.js"></script>
@@ -85,25 +84,25 @@
 <script src="vendor/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
 
 <!--Own AngularCode-->
-<script src="src/angular/app.module.js"></script>
-<script src="src/angular/nav-bar/nav-bar.module.js"></script>
-<script src="src/angular/nav-bar/nav-bar.component.js"></script>
-<script src="src/angular/head-info/head-info.module.js"></script>
-<script src="src/angular/head-info/head-info.component.js"></script>
-<script src="src/angular/service-section/service-section.module.js"></script>
-<script src="src/angular/service-section/service-section.component.js"></script>
-<script src="src/angular/portfolio-section/portfolio-section.module.js"></script>
-<script src="src/angular/portfolio-section/portfolio-section.component.js"></script>
-<script src="src/angular/about-section/about-section.module.js"></script>
-<script src="src/angular/about-section/about-section.component.js"></script>
-<script src="src/angular/team-section/team-section.module.js"></script>
-<script src="src/angular/team-section/team-section.component.js"></script>
-<script src="src/angular/clients-aside/clients-aside.module.js"></script>
-<script src="src/angular/clients-aside/clients-aside.component.js"></script>
-<script src="src/angular/contact-section/contact-section.module.js"></script>
-<script src="src/angular/contact-section/contact-section.component.js"></script>
-<script src="src/angular/footer-section/footer-section.module.js"></script>
-<script src="src/angular/footer-section/footer-section.component.js"></script>
+<script src="angular/app.module.js"></script>
+<script src="angular/nav-bar/nav-bar.module.js"></script>
+<script src="angular/nav-bar/nav-bar.component.js"></script>
+<script src="angular/head-info/head-info.module.js"></script>
+<script src="angular/head-info/head-info.component.js"></script>
+<script src="angular/service-section/service-section.module.js"></script>
+<script src="angular/service-section/service-section.component.js"></script>
+<script src="angular/portfolio-section/portfolio-section.module.js"></script>
+<script src="angular/portfolio-section/portfolio-section.component.js"></script>
+<script src="angular/about-section/about-section.module.js"></script>
+<script src="angular/about-section/about-section.component.js"></script>
+<script src="angular/team-section/team-section.module.js"></script>
+<script src="angular/team-section/team-section.component.js"></script>
+<script src="angular/clients-aside/clients-aside.module.js"></script>
+<script src="angular/clients-aside/clients-aside.component.js"></script>
+<script src="angular/contact-section/contact-section.module.js"></script>
+<script src="angular/contact-section/contact-section.component.js"></script>
+<script src="angular/footer-section/footer-section.module.js"></script>
+<script src="angular/footer-section/footer-section.component.js"></script>
 
 </body>
 
