--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--
- PortfolioSite - Jan Koszela v0.0.1+1 (https://github.com/pawellinkshell/PortfolioSite)
+ PortfolioSite - Jan Koszela v0.1.2 (https://github.com/pawellinkshell/PortfolioSite)
  Copyright 2017 Jan Koszela
  Licensed under MIT (https://github.com/pawellinkshell/PortfolioSite/blob/master/LICENSE)
  -->
@@ -20,9 +20,9 @@
   <!-- endinject -->
 
   <!-- inject:project:css -->
-  <link rel="stylesheet" href="/src/vendor/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="/src/vendor/font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/src/assets/styles/css/portfolio.min.css">
+  <link rel="stylesheet" href="/src/vendor/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/src/assets/styles/css/portfolio-54991aba30.min.css">
   <!-- endinject -->
 
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
