--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--
- PortfolioSite - Jan Koszela v0.1.2 (https://github.com/pawellinkshell/PortfolioSite)
+ PortfolioSite - Jan Koszela v0.1.3 (https://github.com/pawellinkshell/PortfolioSite)
  Copyright 2017 Jan Koszela
  Licensed under MIT (https://github.com/pawellinkshell/PortfolioSite/blob/master/LICENSE)
  -->
@@ -17,12 +17,12 @@
   <title>Jan Koszela - Portfolio site</title>
 
   <!-- inject:vendor:css -->
+  <link rel="stylesheet" href="src/vendor/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="src/vendor/font-awesome/css/font-awesome.css">
   <!-- endinject -->
 
   <!-- inject:project:css -->
-  <link rel="stylesheet" href="/src/vendor/font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/src/vendor/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/src/assets/styles/css/portfolio-54991aba30.min.css">
+  <link rel="stylesheet" href="src/assets/styles/css/portfolio.css">
   <!-- endinject -->
 
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -67,42 +67,42 @@
   <footer-section></footer-section>
 
   <!-- inject:body:vendor:js -->
-  <script src="/src/vendor/jquery/jquery.min.js"></script>
-  <script src="/src/vendor/bootstrap/js/bootstrap.min.js"></script>
-  <script src="/src/vendor/angularjs/angular.min.js"></script>
-  <script src="/src/vendor/angular-animate/angular-animate.min.js"></script>
-  <script src="/src/vendor/angular-touch/angular-touch.min.js"></script>
-  <script src="/src/vendor/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="src/vendor/jquery/jquery.js"></script>
+  <script src="src/vendor/bootstrap/js/bootstrap.js"></script>
+  <script src="src/vendor/angularjs/angular.js"></script>
+  <script src="src/vendor/angular-animate/angular-animate.js"></script>
+  <script src="src/vendor/angular-touch/angular-touch.js"></script>
+  <script src="src/vendor/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
   <!-- endinject -->
 
   <!-- Plugin JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
 
   <!-- inject:body:javascript:js -->
-  <script src="/src/assets/scripts/js/out/contact_me.min.js"></script>
-  <script src="/src/assets/scripts/js/out/portfolio.min.js"></script>
+  <script src="src/assets/scripts/js/contact_me.js"></script>
+  <script src="src/assets/scripts/js/portfolio.js"></script>
   <!-- endinject -->
 
   <!-- inject:body:angular:js -->
-  <script src="/src/angular/about-section/about-section.module.js"></script>
-  <script src="/src/angular/app.module.js"></script>
-  <script src="/src/angular/clients-aside/clients-aside.module.js"></script>
-  <script src="/src/angular/contact-section/contact-section.module.js"></script>
-  <script src="/src/angular/footer-section/footer-section.module.js"></script>
-  <script src="/src/angular/head-info/head-info.module.js"></script>
-  <script src="/src/angular/nav-bar/nav-bar.module.js"></script>
-  <script src="/src/angular/portfolio-section/portfolio-section.module.js"></script>
-  <script src="/src/angular/service-section/service-section.module.js"></script>
-  <script src="/src/angular/team-section/team-section.module.js"></script>
-  <script src="/src/angular/about-section/about-section.component.js"></script>
-  <script src="/src/angular/clients-aside/clients-aside.component.js"></script>
-  <script src="/src/angular/contact-section/contact-section.component.js"></script>
-  <script src="/src/angular/footer-section/footer-section.component.js"></script>
-  <script src="/src/angular/head-info/head-info.component.js"></script>
-  <script src="/src/angular/nav-bar/nav-bar.component.js"></script>
-  <script src="/src/angular/portfolio-section/portfolio-section.component.js"></script>
-  <script src="/src/angular/service-section/service-section.component.js"></script>
-  <script src="/src/angular/team-section/team-section.component.js"></script>
+  <script src="src/angular/app.module.js"></script>
+  <script src="src/angular/about-section/about-section.module.js"></script>
+  <script src="src/angular/clients-aside/clients-aside.module.js"></script>
+  <script src="src/angular/contact-section/contact-section.module.js"></script>
+  <script src="src/angular/footer-section/footer-section.module.js"></script>
+  <script src="src/angular/head-info/head-info.module.js"></script>
+  <script src="src/angular/nav-bar/nav-bar.module.js"></script>
+  <script src="src/angular/portfolio-section/portfolio-section.module.js"></script>
+  <script src="src/angular/service-section/service-section.module.js"></script>
+  <script src="src/angular/team-section/team-section.module.js"></script>
+  <script src="src/angular/about-section/about-section.component.js"></script>
+  <script src="src/angular/clients-aside/clients-aside.component.js"></script>
+  <script src="src/angular/contact-section/contact-section.component.js"></script>
+  <script src="src/angular/footer-section/footer-section.component.js"></script>
+  <script src="src/angular/head-info/head-info.component.js"></script>
+  <script src="src/angular/nav-bar/nav-bar.component.js"></script>
+  <script src="src/angular/portfolio-section/portfolio-section.component.js"></script>
+  <script src="src/angular/service-section/service-section.component.js"></script>
+  <script src="src/angular/team-section/team-section.component.js"></script>
   <!-- endinject -->
 
 </body>
